--- a/index.htm
+++ b/index.htm
@@ -8,15 +8,16 @@
     body {
       font-family: Arial, sans-serif;
       background: url('https://i.ibb.co/4pDNDk1/minecraft-bg.jpg') no-repeat center center fixed;
-      background-size: angkor wat temple;
+      background-size: cover;
       margin: 0;
       padding: 0;
     }
     header {
-      background: rgba(0, 0, 0, 0.7);
-      color: #fff;
-      text-align: center;
-      padding: 20px;
+      <style>
+    body {
+        margin: 0;
+        padding: 0;
+        background: linear-gradient(to right, #ff7e5f, #feb47b); /* ពណ៌ចលនា *
     }
     header h1 {
       margin: 0;
