--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>KH MER KPC - Minecraft Lobby Shop</title>
+  <title>QLIFE SHOP MAP</title>
   <meta name="description" content="លក់ Lobby Minecraft | IP និង Port សម្រាប់សេវា Minecraft ">
   <style>
     :root{--accent:#3aa655;--dark:#0f1720;--muted:#b7c0c8}
