--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
   - Author: ChatGPT
 --><!doctype html>
 
-<html lang="km">
+<html lang="QM">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -46,9 +46,9 @@
 <body>
   <header>
     <div class="brand">
-      <div class="logo">MK</div>
+      <div class="logo">QM</div>
       <div>
-        <div style="font-weight:700">KHMER KPC</div>
+        <div style="font-weight:700">QLIFE SHOP MAP</div>
         <div style="font-size:13px;color:rgba(255,255,255,0.85)">Minecraft Lobby Marketplace</div>
       </div>
     </div>
@@ -91,7 +91,7 @@
 </section>
 
   </main>  <footer>
-    © <span id="year"></span> KHMER KPC • Support: <a href="https://t.me/yourtelegram" target="_blank">Telegram</a>
+    © <span id="year"></span> QLIFE SHOP MAP : <a href="https://t.me/qlifeshop" target="_blank">Telegram</a>
   </footer>  <!-- Modal: Purchase -->  <div class="modal" id="modal">
     <div class="panel">
       <h3 id="modalTitle">Buy Lobby</h3>
@@ -165,6 +165,6 @@
     });
 
     // Contact button opens Telegram
-    document.getElementById('btn-contact').addEventListener('click',()=>{window.open('https://t.me/yourtelegram','_blank')});
+    document.getElementById('btn-contact').addEventListener('click',()=>{window.open('https://t.me/qlifeshop','_blank')});
   </script></body>
               </html>
