--- a/index.htm
+++ b/index.htm
@@ -53,17 +53,17 @@
       </div>
     </div>
     <div class="ipcard">
-      <div style="font-size:13px;color:var(--muted)">Server IP</div>
-      <div style="font-weight:800">mc.khmer-kpc.com</div>
+      <div style="font-size:13px;color:var(--muted)"></div>
+      <div style="font-weight:800"></div>
       <div style="font-size:13px;color:var(--muted);margin-top:6px">Port: <span style="font-weight:700">19132</span></div>
     </div>
   </header>  <main class="container">
     <section class="hero">
       <div class="left">
-        <h1>លក់ Lobby Minecraft — ប្លុក, បរិយាកាស និង ការកំណត់ត្រា</h1>
-        <p>Preview, buy, និងទាញយក Lobby ថ្មីៗសម្រាប់សឺរ្វដែលអាចដំឡើងនៅលើ Minecraft Bedrock/Java (schematic / zip)</p>
+        <h1>Sales Lobby Minecraft</h1>
+        <p>Preview, buy Lobby new for put in serevr Minecraft Bedrock/Java (schematic / zip)</p>
         <div style="margin-top:12px">
-          <a class="btn" id="btn-contact">ទំនាក់ទំនងយើង</a>
+          <a class="btn" id="btn-contact">Contact</a>
         </div>
       </div>
       <div style="width:320px">
@@ -82,7 +82,7 @@
 
 <section style="margin-top:28px">
   <h3>Payment Methods</h3>
-  <div class="small">ABA | Wing | TrueMoney | PayPal (set your payment links in the HTML)</div>
+  <div class="small">ABA | Wing | TrueMoney | (set your payment links in the HTML)</div>
   <div style="margin-top:12px;display:flex;gap:8px;flex-wrap:wrap">
     <div style="background:white;padding:10px;border-radius:10px;box-shadow:0 4px 12px rgba(10,16,22,0.05)">ABA QR</div>
     <div style="background:white;padding:10px;border-radius:10px;box-shadow:0 4px 12px rgba(10,16,22,0.05)">Wing</div>
